--- a/eventos.html
+++ b/eventos.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
     <meta charset="UTF-8">
@@ -76,5 +76,6 @@
 </body>
 </html>
 </body>
+
 
 </html>
